# OpenEnglishTranslation--OET

./: .gitignore  OTNamesInNT.tsv  README.md  pyproject.toml
scripts/: BibleOrgSysGlobals.py  Formats.md  OET-LV-RV_ESFM_to_USFM.py  OSHB_XML_to_TSV.py  README.md  add_tags_to_NT_word_table.py  add_tags_to_OT_word_table.py  add_tags_to_word_table.py  apply_Clear_Macula_OT_glosses.py  backfill_OET-LV.py  connect_OET-RV_words.py  connect_OET-RV_words_via_OET-LV.py  convert_BibTags_USFM_to_TSV.py  convert_ClearMaculaNT_to_TSV.py  convert_ClearMaculaOT_to_TSV.py  convert_ClearMaculaOT_to_our_TSV.py  convert_OET-LV-RV_ESFM_to_USFM.py  convert_OET-LV-RV_USFM_to_VREF.py  convert_OET-LV_to_simple_HTML.py  convert_OET-RV_to_simple_HTML.py  convert_OSHB_XML_to_TSV.py  count_completed_OET-RV_verses.py  create_OET-LV_TSV_name_table.py  delete_OET-RV_word_numbers.py  export_OET-RV_to_sectionReadings.py  extractVLT.py  extract_OSHB_OT_to_ESFM.py  extract_OSHB_OT_to_USFM.py  extract_VLT_NT_to_ESFM.py  extract_VLT_NT_to_USFM.py  extract_glossed_OSHB_OT_to_ESFM.py  makefile  pack_HTML_side-by-side.py  prepare_OSHB_for_glossing.py  pyproject.toml  retrieve_translation_source_texts.py  spell_check.py  update_OET-LV-NT.py
scripts/ScriptedOTUpdates/: ScriptedBibleEditor.control.toml  adjustCapitalisation.commandTable.tsv  adjustPunctuation.commandTable.tsv  changeFromUSSpelling.commandTable.tsv  finalCleanup.commandTable.tsv  removeAdds.commandTable.tsv  restoreNames.commandTable.tsv  wordingAdjustments.commandTable.tsv
scripts/ScriptedVLTUpdates/: NTNames.commandTable.tsv  (+12 more)
(+1010 files in other folders)
